--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>org.example</groupId>
     <artifactId>Amoba2</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
+    <name>Amoba2</name>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -27,20 +30,7 @@
         <scope>test</scope>
     </dependency>
     </dependencies>
-<!--    <dependencies>-->
-<!--        <dependency>-->
-<!--            <groupId>junit</groupId>-->
-<!--            <artifactId>junit</artifactId>-->
-<!--            <version>RELEASE</version>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.junit.jupiter</groupId>-->
-<!--            <artifactId>junit-jupiter</artifactId>-->
-<!--            <version>RELEASE</version>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
-<!--    </dependencies>-->
+
     <build>
         <plugins>
             <plugin>
