--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,11 @@
     <name>Amoba2</name>
 
     <properties>
+        <java.version>21</java.version>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
     </properties>
     <dependencies>
     <dependency>
@@ -33,10 +35,23 @@
 
     <build>
         <plugins>
+            <!-- Checkstyle Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M7</version>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+<!--                <artifactId>maven-surefire-plugin</artifactId>-->
+                <version>3.0.0</version>
+            <configuration>
+                <configuration>${basedir}/src/main/resources/checkstyle.xml</configuration>
+            </configuration>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
