--- a/pom.xml
+++ b/pom.xml
@@ -77,9 +77,9 @@
                 <version>${maven-checkstyle.version}</version>
 <!--                <artifactId>maven-surefire-plugin</artifactId>-->
 <!--                <version>3.0.0</version>-->
-            <configuration>
-                <configuration>${basedir}/src/main/resources/checkstyle.xml</configuration>
-            </configuration>
+<!--            <configuration>-->
+<!--                <configuration>${basedir}/src/main/resources/checkstyle.xml</configuration>-->
+<!--            </configuration>-->
                 <executions>
                     <execution>
                         <phase>validate</phase>
