--- a/pom.xml
+++ b/pom.xml
@@ -42,13 +42,7 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
     </dependency>
-<!--    <dependency>-->
-<!--        <groupId>org.junit.jupiter</groupId>-->
-<!--        <artifactId>junit-jupiter-api</artifactId>-->
-<!--        <artifactId>junit-jupiter-engine</artifactId>-->
-<!--        <version>5.9.3</version>-->
-<!--        <scope>test</scope>-->
-<!--    </dependency>-->
+
     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
@@ -65,6 +59,28 @@
         <artifactId>spring-boot-starter-test</artifactId>
         <scope>test</scope>
     </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>3.7.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.4.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.20.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.18</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
